Added Mockery init to phpunit.xml

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -22,4 +22,5 @@
             </exclude>
         </whitelist>
     </filter>
+    <listener class="\Mockery\Adapter\Phpunit\TestListener"></listener>
 </phpunit>
