--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,10 @@ php:
 before_script:
     - composer install --dev --prefer-source
 
-script: phpunit --coverage-text
+script: phpunit --coverage-clover build/logs/clover.xml
 
 notifications:
     email: false
+
+after_script:
+    - php vendor/bin/coveralls -v
