--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
         "matthiasnoback/symfony-dependency-injection-test": "0.2.*",
-        "mockery/mockery": "dev-master"
+        "mockery/mockery": "dev-master",
+        "satooshi/php-coveralls": "dev-master"
     },
     "autoload": {
         "psr-0": {"EzSystems\\QueryBuilderBundle": ""}
