--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "require": {
         "ezsystems/ezpublish-api": "*",
-        "symfony/symfony": "*"
+        "symfony/symfony": "*",
+        "sensio/generator-bundle": "2.2.*"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
