--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
     ],
     "require": {
         "ezsystems/ezpublish-api": "*",
-        "symfony/symfony": "*",
-        "sensio/generator-bundle": "2.2.*"
+        "symfony/symfony": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
