--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "ezsystems/query-builder-bundle",
     "description": "Fluent repository query builder for eZ Publish 5",
     "license": "GPL-2.0",
+    "type": "ezplatform-bundle",
     "authors": [
         {
             "name": "Bertrand Dunogier",
